k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: notes-staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: notes-production
